# GatesBot

./: .dockerignore  .flake8  .git-blame-ignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  Dockerfile.arm  README.md  cog.toml  dbot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint-pr.yml  publish-image.yml
cogs/: admin.py  avrae_listener.py  dm_queue.py  errors.py  gate_owners.py  gates.py  help.py  placeholders.py  queue.py  schedule.py  strike_queue.py  to-do.py  tracker.py  util.py
cogs/models/: queue_models.py  todo_views.py
src/: dbot.py
src/bot/: __init__.py  bootstrap.py  logging_setup.py  prefixes.py
src/cogs/: admin.py  dm_queue.py  errors.py  gate_owners.py  placeholders.py  queue.py  schedule.py  strike_queue.py  util.py
src/cogs/models/: queue_models.py
src/common/: __init__.py  checks.py  constants.py  discord_utils.py  embeds.py  settings.py  types.py
src/queueing/: __init__.py  config.py  contracts.py  documents.py  messages.py  models.py  parsing.py  repository.py  services.py
src/queueing/repositories/: __init__.py  analytics.py  gates.py  meta.py  queue.py  ready_queue.py
src/queueing/services/: __init__.py  container.py  dm_queue.py  player_queue.py  presentation.py  strike_queue.py
src/queueing/views/: __init__.py  admin.py  dm_queue.py  player_queue.py  strike_queue.py
src/ui/: dm_queue_menu.py  queue_menu.py  strike_queue_menu.py
src/utils/: config.py  constants.py  functions.py
tests/: test_discord_utils.py  test_prefixes.py  test_queue_repository.py  test_queue_services.py  test_queueing.py
tests/bot/: test_prefixes.py
tests/common/: test_discord_utils.py
tests/helpers/: builders.py  fakes.py
tests/queueing/: test_messages.py  test_models.py  test_parsing.py
tests/queueing/repositories/: test_analytics.py  test_queue.py  test_ready_queue.py
tests/queueing/services/: test_dm_queue.py  test_player_queue.py  test_presentation.py  test_strike_queue.py
tests/queueing/views/: test_player_queue_view.py
ui/: dm_queue_menu.py  queue_admin_menu.py  queue_menu.py
utils/: checks.py  config.py  constants.py  functions.py
