[project]
name = "Gatesbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "d20>=1.1.2",
    "disnake[discord]==2.9",
    "jishaku<=2.4.0",
    "motor==3.1.1",
    "pymongo~=4.8.0",
    "pendulum>=3.2.0",
    "psutil>=7.2.2",
    "setuptools==80.9.0",
    "sentry-sdk==0.19.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C90", "E", "F", "W"]
ignore = ["E722"]

[tool.ruff.lint.mccabe]
max-complexity = 18
