[project]
name = "Gatesbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "d20>=1.1.2",
    "disnake>=2.11,<3",
    "pymongo>=4.11,<5",
    "pendulum>=3.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["B", "C90", "E", "F", "W"]
ignore = ["E722"]

[tool.ruff.lint.mccabe]
max-complexity = 18
