[project]
name = "Gatesbot"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "d20>=1.1.2",
    "disnake>=2.11,<3",
    "pymongo>=4.11,<5",
    "pendulum>=3.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["B", "C90", "E", "F", "W"]
ignore = ["E722"]

[tool.ruff.lint.mccabe]
max-complexity = 18
